matches a specified name using globbing patterns or regular
expressions.  You can also search for objects that have attributes
set, that are referenced in combinations, are at a particular depth in
the geometry hierarchy, and much more.  You can combine search
expressions together using boolean logic as well for even more
powerful operations.

* upgraded libpng to 1.2.32 - Erik Greenwald
* fixed memory leak with in-memory geometry databases - Daniel Roßberg
* mged help menu is restructured for improved usability - Cliff Yapp
* update openNURBS to version 4.0.2007.0718 - Cliff Yapp
* handle (i.e., ignore) comments in asc2g conversions - Erik Greenwald
* fix crash in iges-g when run with -n option - John Anderson
* enhanced documentation management system within mged - Cliff Yapp
* conversion of documentation to Docbook format, editing, and review
	- Cliff Yapp, Janine Gettier
* improved benchmark suite usage and instructions - Sean Morrison
* improved mesh normals from Pro/E exporter - Bob Parker
* fixed 'bspline' surface primitive wireframe plot bug - John Anderson
* removed bot-raw, functionality replaced by bot_dump - Sean Morrison
* abort during non-planar collapse or simplify of NMG  - John Anderson
* jove is deprecated and will no longer be maintained - Sean Morrison
* plugged attribute memory leak in all database tools - Daniel Roßberg
* DSP tessellation honors cut type and handles zeros - John Anderson
* fixed 'gets' command input bug in mged - Sean Morrison, Bob Parker
* improved fast4-g DOS file line-ending support - Sean Morrison
* numerous documentation fixes to manual pages - Cliff Yapp
* bot_dump exporter for extracting BoT meshes unevaluated - Bob Parker
* fixed bug parsing long command lines in mged - Sean Morrison
* tessellation support for the DSP primitive - John Anderson
* additional logging options in Pro/E exporter - Bob Parker
* Pro/E exporter enhancements for dynamic tess tolerance - Bob Parker